[package]
name = "lmntalc-rs"
description = "A Rust implementation of LMNTAL compiler"
license = "MIT"
authors = ["Qirui Wang <qirui.wang@moegi.waseda.jp>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lmntalc"
path = "src/main.rs"

[lib]
name = "liblmntalc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
once_cell = "1.18.0"
pest = "2.6.0"
pest_derive = "2.6.0"
rand = "0.8.5"
